# erlynum

./: .gitignore  LICENSE  README.md  rebar.config
c_src/: CMakeLists.txt  Makefile  backend_loader.c  backend_loader.h  backend_loader_posix.c  backend_loader_posix.h  backend_loader_win32.c  blas_fallback.c  blas_fallback.h  erl_util.c  erl_util.h  erlynum_drv.c  error_atoms.h  narray.c  narray.h  nblas.c  nblas.h  nmatrix.c  nmatrix.h  ntypes.c  ntypes.h  nvector.c  nvector.h
include/: erlynum.hrl
src/: erlynum.app.src  erlynum.erl  erlynum_nif.erl  erlynum_p.erl  nmatrix.erl  nvector.erl
test/: blas_level1_SUITE.erl  vector_basics_SUITE.erl
